Improved re-sizing of canvas and map for smaller screens.

--- a/campers.html
+++ b/campers.html
@@ -180,12 +180,12 @@
 				Gertrude was my first camper van. She was given an ugly name to match her... well... ugliness. When I bought her she was already fitted out but I decided it was shit, pulled everything out and started from scratch. Lots of fun! Sadly Gertrude died and was unable to complete her last mission to Edinburgh. May she rest in peace... as a cube... because I had her crushed into a cube.
 			</p>
 
-			<canvas id="gertrudeCanvas" width="720px" height="480px">
+			<canvas id="gertrudeCanvas">
 				If you're seeing this your web browser doesn't support the &lt;canvas&gt;&gt; element. Ouch!
 			</canvas>
 
 			<div class="aside">
-				<div id="gertrudeMap" style="width: 720px; height: 480px;"></div>
+				<div id="gertrudeMap"></div>
 			</div>
 		</div>
 
