--- a/film.html
+++ b/film.html
@@ -33,7 +33,7 @@
 			At University I took a couple of Screen and Media papers as my electorates. Most of what I've made has no seriousness at all and I like that.
 		</p>
 
-		<a onclick="selectSection('section', 'str8Gangsta'); pauseVideos();"><h3>Str8 Gangsta</h3></a>
+		<a onclick="selectFilmSection('section', 'str8Gangsta');"><h3>Str8 Gangsta</h3></a>
 		<div id="str8Gangsta" class="section">
 			<div class="aside">
 				<video id="str8GangstaVideo" controls="controls" preload="metadata">
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 
-		<a onclick="selectSection('section', 'bigDeal'); pauseVideos();"><h3>Big Deal</h3></a>
+		<a onclick="selectFilmSection('section', 'bigDeal');"><h3>Big Deal</h3></a>
 		<div id="bigDeal" class="section">
 			<div class="aside">
 				<video id="bigDealVideo" controls="controls" preload="metadata">
@@ -81,13 +81,13 @@
 			</div>
 		</div>
 
-		<a onclick="selectSection('section', 'destructiveLove'); pauseVideos();"><h3>Destructive Love</h3></a>
+		<a onclick="selectFilmSection('section', 'destructiveLove');"><h3>Destructive Love</h3></a>
 		<div id="destructiveLove" class="section">
 			<p>
 				A 3 part mocumentary series about the making of a show called "Enduring Love". I made it with a few friends from the Screen and Media classes at Uni and some acting students we got to act with us. Originally we intended to screen this on Big TV (the Uni's TV station) but it went under before we got the chance!
 			</p>
 
-			<a onclick="selectSection('subSection', 'destructiveLove01'); pauseVideos();"><h4>01 Pre-Production</h4></a>
+			<a onclick="selectFilmSection('subSection', 'destructiveLove01');"><h4>01 Pre-Production</h4></a>
 			<div id="destructiveLove01" class="subSection">
 				<div class="aside">
 					<video id="destructiveLove01Video" controls="controls" preload="metadata">
@@ -111,7 +111,7 @@
 				</div>
 			</div>
 
-			<a onclick="selectSection('subSection', 'destructiveLove02'); pauseVideos();"><h4>02 Production</h4></a>
+			<a onclick="selectFilmSection('subSection', 'destructiveLove02');"><h4>02 Production</h4></a>
 			<div id="destructiveLove02" class="subSection">
 				<div class="aside">
 					<video id="destructiveLove02Video" controls="controls" preload="metadata">
@@ -135,7 +135,7 @@
 				</div>
 			</div>
 
-			<a onclick="selectSection('subSection', 'destructiveLove03'); pauseVideos();"><h4>03 Post-Production</h4></a>
+			<a onclick="selectFilmSection('subSection', 'destructiveLove03');"><h4>03 Post-Production</h4></a>
 			<div id="destructiveLove03" class="subSection">
 				<div class="aside">
 					<video id="destructiveLove03Video" controls="controls" preload="metadata">
@@ -160,7 +160,7 @@
 			</div>
 		</div>
 
-		<a onclick="selectSection('section', 'supernova'); pauseVideos();"><h3>Supernova</h3></a>
+		<a onclick="selectFilmSection('section', 'supernova');"><h3>Supernova</h3></a>
 		<div id="supernova" class="section">
 			<div class="aside">
 				<video id="supernovaVideo" controls="controls" preload="metadata">
