Added lucille'smap and stopped camper viewer from duplicating and spinning faster.

--- a/campers.html
+++ b/campers.html
@@ -204,9 +204,9 @@
 				Lucille was a 16 seater mini-bus. I whipped out all of her seats and fitted her as a luxury moving home. Some lucky guy picker her up for cheap since I was leaving europe and needed a quick sale during winter...
 			</p>
 
-			<p>
-				Coming soon...
-			</p>
+			<div class="aside">
+				<div id="lucilleMap"></div>
+			</div>
 		</div>
 	</body>
 
