Gertrude is interactive!

--- a/campers.html
+++ b/campers.html
@@ -30,6 +30,7 @@
 		<script type="text/javascript" src="js/simplicityjs/ScriptingEngine.js"></script>
 		<script type="text/javascript" src="js/simplicityjs/Simplicity.js"></script>
 
+		<script type="text/javascript" src="js/camper-viewer/CameraSpringer.js"></script>
 		<script type="text/javascript" src="js/camper-viewer/AlphaPipeline.js"></script>
 		<script type="text/javascript" src="js/camper-viewer/Animator.js"></script>
 		<script type="text/javascript" src="js/camper-viewer/Main.js"></script>
