Fixed delta timer. Added view transitions and a placeholder interior view!

--- a/campers.html
+++ b/campers.html
@@ -15,13 +15,13 @@
 		<script type="text/javascript" src="js/sections.js"></script>
 		<script type="text/javascript" src="js/campers.js"></script>
 
-		<script type="text/javascript" src="js/lib/J3DI.js"></script>
-		<script type="text/javascript" src="js/lib/J3DIMath.js"></script>
-		<script type="text/javascript" src="js/lib/webgl-debug.js"></script>
-		<script type="text/javascript" src="js/lib/webgl-utils.js"></script>
-
+		<script type="text/javascript" src="js/simplicityjs/lib/J3DI.js"></script>
+		<script type="text/javascript" src="js/simplicityjs/lib/J3DIMath.js"></script>
+		<script type="text/javascript" src="js/simplicityjs/lib/webgl-debug.js"></script>
+		<script type="text/javascript" src="js/simplicityjs/lib/webgl-utils.js"></script>
 		<script type="text/javascript" src="js/simplicityjs/Camera.js"></script>
 		<script type="text/javascript" src="js/simplicityjs/Entity.js"></script>
+		<script type="text/javascript" src="js/simplicityjs/Math.js"></script>
 		<script type="text/javascript" src="js/simplicityjs/Model.js"></script>
 		<script type="text/javascript" src="js/simplicityjs/ModelFactory.js"></script>
 		<script type="text/javascript" src="js/simplicityjs/Pipeline.js"></script>
@@ -32,9 +32,11 @@
 
 		<script type="text/javascript" src="js/camper-viewer/CameraSpringer.js"></script>
 		<script type="text/javascript" src="js/camper-viewer/AlphaPipeline.js"></script>
-		<script type="text/javascript" src="js/camper-viewer/Animator.js"></script>
+		<script type="text/javascript" src="js/camper-viewer/Flipper.js"></script>
 		<script type="text/javascript" src="js/camper-viewer/Main.js"></script>
 		<script type="text/javascript" src="js/camper-viewer/Spinner.js"></script>
+		<script type="text/javascript" src="js/camper-viewer/View.js"></script>
+		<script type="text/javascript" src="js/camper-viewer/ViewEngine.js"></script>
 
 		<script id="mirrorVertexShader" type="x-shader/x-vertex">
 			uniform mat4 cameraTransform;
