--- a/film.html
+++ b/film.html
@@ -1,188 +1,55 @@
-<!DOCTYPE html>
-<html>
+<div class="ui segment">
+	<div class="ui text container">
+		<p>At University I took a couple of Screen and Media papers as my electorates. Most of what I've made has no seriousness at all and I like that.</p>
+	</div>
+</div>
 
-	<head>
-		<title>Gary / Gyan</title>
+<div class="ui inverted segment">
+	<div class="ui text container">
+		<h2>Str8 Gangsta</h2>
 
-		<meta name=viewport content="width=device-width, initial-scale=1">
+		<p>An instant cult classic. The first film officially made by simple entertainment (me). This film may or may not depict graphic violence and strong course language.</p>
 
-		<link rel="shortcut icon" href="images/favicon.ico" />
-		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
-		<link rel="stylesheet" type="text/css" href="css/layout.css" />
-		<link rel="stylesheet" type="text/css" href="css/film.css" />
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/ksb9gF8jClE" frameborder="0" allowfullscreen></iframe>
+	</div>
+</div>
 
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-		<script type="text/javascript" src="js/sections.js"></script>
-		<script type="text/javascript" src="js/film.js"></script>
-	</head>
+<div class="ui segment">
+	<div class="ui text container">
+		<h2>Big Deal</h2>
 
-	<body>
-		<div id="header">
-			<h1><a href="index.html">Gary Shawn Buyn / Prem Gyan</a></h1>
-			<div id="menu">
-				<a href="osho.html">Osho</a>
-				<a href="software.html">Software</a>
-				<h2>Film</h2>
-				<a href="campers.html">Campers</a>
-				<a href="poetry.html">Poetry</a>
-				<a href="contact.html">Contact</a>
-			</div>
-		</div>
+		<p>Now, after numerous extensions to the release date and exceeding the budget 10 fold, the most anticipated film of Summer 07-08 is here! What's more, all the critics are hailing it as 'worth the wait' and 'revolutionary'. P.S. Why is it that every second film you see an add for is 'revolutionary'? That's bullshit.</p>
 
-		<p>
-			At University I took a couple of Screen and Media papers as my electorates. Most of what I've made has no seriousness at all and I like that.
-		</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/HBET8jmF_II" frameborder="0" allowfullscreen></iframe>
+	</div>
+</div>
 
-		<a onclick="selectFilmSection('section', 'str8Gangsta');"><h3>Str8 Gangsta</h3></a>
-		<div id="str8Gangsta" class="section">
-			<div class="aside">
-				<video id="str8GangstaVideo" controls="controls" preload="metadata">
-					No video for you sonny jim, your browser doesn't support it.
-				</video>
-			</div>
+<div class="ui inverted segment">
+	<div class="ui text container">
+		<h2>Destructive Love</h2>
 
-			<p>
-				An instant cult classic. The first film officially made by simple entertainment (me). This film may or may not depict graphic violence and strong course language.
-			</p>
+		<p>A three part mocumentary series about the making of a show called "Enduring Love". I made it with a few friends from the Screen and Media classes at Uni and some acting students we got to act with us. Originally we intended to screen this on Big TV (the Uni's TV station) but it went under before we got the chance!</p>
 
-			<div class="roundButton sd">
-				<a onclick="switchVideo($(this), 'str8GangstaVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfnZOMmNqNXktMll0MGdJbXZYaXVKeVlOZkQ5Skx2M2lSWHd1UXdwMEQ1LW8/Str8 Gangsta (360).mp4');">
-					<img src="images/sd.png" alt="SD" />
-				</a>
-			</div>
-			<div class="roundButton hd">
-				<a onclick="switchVideo($(this), 'str8GangstaVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfnZOMmNqNXktMll0MGdJbXZYaXVKeVlOZkQ5Skx2M2lSWHd1UXdwMEQ1LW8/Str8 Gangsta (720).mp4');">
-					<img src="images/hd.png" alt="HD" />
-				</a>
-			</div>
-		</div>
+		<h3>01 Pre-Production</h3>
 
-		<a onclick="selectFilmSection('section', 'bigDeal');"><h3>Big Deal</h3></a>
-		<div id="bigDeal" class="section">
-			<div class="aside">
-				<video id="bigDealVideo" controls="controls" preload="metadata">
-					No video for you sonny jim, your browser doesn't support it.
-				</video>
-			</div>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/McMIBQr4JAw" frameborder="0" allowfullscreen></iframe>
 
-			<p>
-				Now, after numerous extensions to the release date and exceeding the budget 10 fold, the most anticipated film of Summer 07-08 is here! What's more, all the critics are hailing it as 'worth the wait' and 'revolutionary'. P.S. Why is it that every second film you see an add for is 'revolutionary'? That's bullshit.
-			</p>
+		<h3>02 Production</h3>
 
-			<div class="roundButton sd">
-				<a onclick="switchVideo($(this), 'bigDealVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfnNJYVhjdTNJaEVOUTlHRVgxRnN2WkZjS0t4MkMwd1h4ZWR1SzA3Y3BCVlU/Big Deal (360).mp4');">
-					<img src="images/sd.png" alt="SD" />
-				</a>
-			</div>
-			<div class="roundButton hd">
-				<a onclick="switchVideo($(this), 'bigDealVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfnNJYVhjdTNJaEVOUTlHRVgxRnN2WkZjS0t4MkMwd1h4ZWR1SzA3Y3BCVlU/Big Deal (720).mp4');">
-					<img src="images/hd.png" alt="HD" />
-				</a>
-			</div>
-		</div>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/z0BTMW17s84" frameborder="0" allowfullscreen></iframe>
 
-		<a onclick="selectFilmSection('section', 'destructiveLove');"><h3>Destructive Love</h3></a>
-		<div id="destructiveLove" class="section">
-			<p>
-				A 3 part mocumentary series about the making of a show called "Enduring Love". I made it with a few friends from the Screen and Media classes at Uni and some acting students we got to act with us. Originally we intended to screen this on Big TV (the Uni's TV station) but it went under before we got the chance!
-			</p>
+		<h3>03 Post-Production</h3>
 
-			<a onclick="selectFilmSection('subSection', 'destructiveLove01');"><h4>01 Pre-Production</h4></a>
-			<div id="destructiveLove01" class="subSection">
-				<div class="aside">
-					<video id="destructiveLove01Video" controls="controls" preload="metadata">
-						No video for you sonny jim, your browser doesn't support it.
-					</video>
-				</div>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/jkH4JUv3AHA" frameborder="0" allowfullscreen></iframe>
+	</div>
+</div>
 
-				<p>
-					The premiere!
-				</p>
+<div class="ui segment">
+	<div class="ui text container">
+		<h2>Supernova</h2>
 
-				<div class="roundButton sd">
-					<a onclick="switchVideo($(this), 'destructiveLove01Video', 'https://googledrive.com/host/0B54v-1wOoeUGfm9XRVNVa3RIMlRjTm81US1PWEx0Rmg1Ynl6NkxKODB1eWN2d3BBQlk5cUk/01 Pre-Production (360).mp4');">
-						<img src="images/sd.png" alt="SD" />
-					</a>
-				</div>
-				<div class="roundButton hd">
-					<a onclick="switchVideo($(this), 'destructiveLove01Video', 'https://googledrive.com/host/0B54v-1wOoeUGfm9XRVNVa3RIMlRjTm81US1PWEx0Rmg1Ynl6NkxKODB1eWN2d3BBQlk5cUk/01 Pre-Production (720).mp4');">
-						<img src="images/hd.png" alt="HD" />
-					</a>
-				</div>
-			</div>
+		<p>A music video I made for the song "Supernova" by Powerman 5000. I made it with one other person at Uni as an editing project.</p>
 
-			<a onclick="selectFilmSection('subSection', 'destructiveLove02');"><h4>02 Production</h4></a>
-			<div id="destructiveLove02" class="subSection">
-				<div class="aside">
-					<video id="destructiveLove02Video" controls="controls" preload="metadata">
-						No video for you sonny jim, your browser doesn't support it.
-					</video>
-				</div>
-
-				<p>
-					The second episode...
-				</p>
-
-				<div class="roundButton sd">
-					<a onclick="switchVideo($(this), 'destructiveLove02Video', 'https://googledrive.com/host/0B54v-1wOoeUGfm9XRVNVa3RIMlRjTm81US1PWEx0Rmg1Ynl6NkxKODB1eWN2d3BBQlk5cUk/02 Production (360).mp4');">
-						<img src="images/sd.png" alt="SD" />
-					</a>
-				</div>
-				<div class="roundButton hd">
-					<a onclick="switchVideo($(this), 'destructiveLove02Video', 'https://googledrive.com/host/0B54v-1wOoeUGfm9XRVNVa3RIMlRjTm81US1PWEx0Rmg1Ynl6NkxKODB1eWN2d3BBQlk5cUk/02 Production (720).mp4');">
-						<img src="images/hd.png" alt="HD" />
-					</a>
-				</div>
-			</div>
-
-			<a onclick="selectFilmSection('subSection', 'destructiveLove03');"><h4>03 Post-Production</h4></a>
-			<div id="destructiveLove03" class="subSection">
-				<div class="aside">
-					<video id="destructiveLove03Video" controls="controls" preload="metadata">
-						No video for you sonny jim, your browser doesn't support it.
-					</video>
-				</div>
-
-				<p>
-					The finale!
-				</p>
-
-				<div class="roundButton sd">
-					<a onclick="switchVideo($(this), 'destructiveLove03Video', 'https://googledrive.com/host/0B54v-1wOoeUGfm9XRVNVa3RIMlRjTm81US1PWEx0Rmg1Ynl6NkxKODB1eWN2d3BBQlk5cUk/03 Post-Production (360).mp4');">
-						<img src="images/sd.png" alt="SD" />
-					</a>
-				</div>
-				<div class="roundButton hd">
-					<a onclick="switchVideo($(this), 'destructiveLove03Video', 'https://googledrive.com/host/0B54v-1wOoeUGfm9XRVNVa3RIMlRjTm81US1PWEx0Rmg1Ynl6NkxKODB1eWN2d3BBQlk5cUk/03 Post-Production (720).mp4');">
-						<img src="images/hd.png" alt="HD" />
-					</a>
-				</div>
-			</div>
-		</div>
-
-		<a onclick="selectFilmSection('section', 'supernova');"><h3>Supernova</h3></a>
-		<div id="supernova" class="section">
-			<div class="aside">
-				<video id="supernovaVideo" controls="controls" preload="metadata">
-					No video for you sonny jim, your browser doesn't support it.
-				</video>
-			</div>
-
-			<p>
-				A music video I made for the song "Supernova" by Powerman 5000. I made it with one other person at Uni as an editing project.
-			</p>
-
-			<div class="roundButton sd">
-				<a onclick="switchVideo($(this), 'supernovaVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfmMzcUphZGdCX243clRWUmFWVk9yMGdzZXdPUTNjZUpIZ2tybUowd1JLUDQ/Supernova (360).mp4');">
-					<img src="images/sd.png" alt="SD" />
-				</a>
-			</div>
-			<div class="roundButton hd">
-				<a onclick="switchVideo($(this), 'supernovaVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfmMzcUphZGdCX243clRWUmFWVk9yMGdzZXdPUTNjZUpIZ2tybUowd1JLUDQ/Supernova (720).mp4');">
-					<img src="images/hd.png" alt="HD" />
-				</a>
-			</div>
-		</div>
-	</body>
-
-</html>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/P2SCOVAAww8" frameborder="0" allowfullscreen></iframe>
+	</div>
+</div>
