--- a/osho.html
+++ b/osho.html
@@ -1,86 +1,39 @@
-<!DOCTYPE html>
-<html>
+<div class="ui segment">
+	<div class="ui text container">
+		<p>I was first introduced to Osho through the book "Tantra Experience". I was blown away by the way he wrote (or spoke as I later found out). He told the story so beautifully and was able to express spirituality without being really "spiritual". His meditations have easily been the most powerful meditative experiences of my life. No other meditations I have done have come close.</p>
+	</div>
+</div>
 
-	<head>
-		<title>Gary / Gyan</title>
+<div class="ui inverted segment">
+	<div class="ui text container">
+		<h2 class="ui inverted header">OSHO Information Center, Auckland <small><a href="http://www.osho.nz">[osho.nz]</a></small></h2>
 
-		<meta name=viewport content="width=device-width, initial-scale=1">
+		<p>I created a basic website to provide information about Osho in New Zealand (primarily Osho in Auckland) and when I'm in town I try to help out where I can.</p>
+	</div>
+</div>
 
-		<link rel="shortcut icon" href="images/favicon.ico" />
-		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
-		<link rel="stylesheet" type="text/css" href="css/layout.css" />
+<div class="ui segment">
+	<div class="ui text container">
+		<h2 class="ui header">OSHO International Meditation Resort <small><a href="http://www.osho.com/visit">[osho.com/visit]</a></small></h2>
 
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-		<script type="text/javascript" src="js/sections.js"></script>
-	</head>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/_-cLTEAtBDU" frameborder="0" allowfullscreen></iframe>
 
-	<body>
-		<div id="header">
-			<h1><a href="index.html">Gary Shawn Buyn / Prem Gyan</a></h1>
-			<div id="menu">
-				<h2>Osho</h2>
-				<a href="software.html">Software</a>
-				<a href="film.html">Film</a>
-				<a href="campers.html">Campers</a>
-				<a href="poetry.html">Poetry</a>
-				<a href="contact.html">Contact</a>
-			</div>
-		</div>
+		<p>I first visited the meditation resort in Pune, India in November 2014 and since then I've spent more than 6 months living, meditating and working there. It is a place of experimentation. There is a lot on offer, lots of OSHO meditations, the OSHO meditative therapies and various courses and sessions. It is a place where it is up to you to be totally honest with yourself. Your meditation can only go as deep as your honesty.</p>
 
-		<p>
-			I was first introduced to Osho through the book "Tantra Experience". I was blown away by the way he wrote (or spoke as I later found out). He told the story so beautifully and was able to express spirituality without being really "spiritual". His meditations have easily been the most powerful meditative experiences of my life. No other meditations I have done have come close.
-		</p>
+		<p>During my first visit I was lucky enough to attend 10 days of Tantra courses with <a href="http://www.homaandmukto.com/">Homa and Mukto</a>.</p>
 
-		<a onclick="selectSection('section', 'oic');"><h3>OSHO Information Center, Auckland</h3></a>
-		<div id="oic" class="section">
-			<p>
-				I created a basic website to provide information about Osho in New Zealand (primarily Osho in Auckland) and when I'm in town I try to help out where I can.
-			</p>
+		<p>Lately I have begun working towards making OSHO more available through digital means. Hopefully I will be able to create an app and website backed by an infrastructure that can deliver his words, audio, video, meditations and more.</p>
+	</div>
+</div>
 
-			<div class="roundButton">
-				<a href="http://www.osho.nz">
-					<img src="images/website.png" alt="Website" />
-				</a>
-			</div>
-		</div>
+<div class="ui inverted segment">
+	<div class="ui text container">
+		<h2 class="ui inverted header">Samaya Ashram <small><a href="http://www.ashraminthebush.org.au">[ashraminthebush.org.au]</a></small></h2>
 
-		<a onclick="selectSection('section', 'oimr');"><h3>OSHO International Meditation Resort</h3></a>
-		<div id="oimr" class="section">
-			<p>
-				I spent 3 months in the meditation resort, Pune, India (Nov 2014 - Feb 2015). It is a place of experimentation. There is a lot on offer, lots of OSHO meditations, the OSHO meditative therapies and various courses and sessions.
-			</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/9lkazFEMtp8" frameborder="0" allowfullscreen></iframe>
 
-			<p>
-				I did the Creative Living program and was lucky enough to attend 10 days of Tantra courses with <a href="http://www.homaandmukto.com/">Homa and Mukto</a>.
-			</p>
+		<p>I spent 6 months at Samaya Ashram (the second half of 2013). It is a beautiful and intimate place filled with love and beautiful people. It is also a powerful place for self-transformation. Why did I leave again?</p>
 
-			<div class="roundButton">
-				<a href="http://www.osho.com/visit">
-					<img src="images/website.png" alt="Website" />
-				</a>
-			</div>
-		</div>
-
-		<a onclick="selectSection('section', 'samaya');"><h3>Samaya Ashram</h3></a>
-		<div id="samaya" class="section">
-			<div class="aside">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/9lkazFEMtp8" frameborder="0" allowfullscreen></iframe>
-			</div>
-
-			<p>
-				I spent 6 months at Samaya Ashram (the second half of 2013). It is a beautiful and intimate place filled with love and beautiful people. It is also a powerful place for self-transformation. Why did I leave again?
-			</p>
-
-			<p>
-				Oh... and this is where I got the name Prem Gyan. Prem = Love, Gyan = Wisdom. It was explained to me that I need to take the path of love to attain wisdom.
-			</p>
-
-			<div class="roundButton">
-				<a href="http://www.ashraminthebush.org.au">
-					<img src="images/website.png" alt="Website" />
-				</a>
-			</div>
-		</div>
-	</body>
-
-</html>
+		<p>Oh... and this is where I got the name Prem Gyan. Prem = Love, Gyan = Wisdom. It was explained to me that I need to take the path of love to attain wisdom.</p>
+	</div>
+</div>
