--- a/index.html
+++ b/index.html
@@ -1,32 +1,192 @@
 <!DOCTYPE html>
-<html>
-
+<html ng-app="me">
 	<head>
 		<title>Gary / Gyan</title>
 
 		<meta name=viewport content="width=device-width, initial-scale=1">
 
 		<link rel="shortcut icon" href="images/favicon.ico" />
-		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
-		<link rel="stylesheet" type="text/css" href="css/layout.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
+		<link rel="stylesheet" href="me.css">
 	</head>
 
 	<body>
-		<div id="header">
-			<h1><a href="index.html">Gary Shawn Buyn / Prem Gyan</a></h1>
-			<div id="menu">
-				<a href="osho.html">Osho</a>
-				<a href="software.html">Software</a>
-				<a href="film.html">Film</a>
-				<a href="campers.html">Campers</a>
-				<a href="poetry.html">Poetry</a>
-				<a href="contact.html">Contact</a>
+		<div class="ui main text container">
+			<h1 class="ui main header">Gary Shawn Buyn / Prem Gyan</h1>
+		</div>
+		<div class="ui main borderless secondary pointing menu">
+			<div class="ui text container">
+				<a class="item" href="#/home">Home</a>
+				<a class="item" href="#/osho">Osho</a>
+				<a class="item" href="#/software">Software</a>
+				<a class="item" href="#/campers">Campers</a>
+				<a class="item" href="#/film">Film</a>
+				<a class="item" href="#/poetry">Poetry</a>
 			</div>
 		</div>
 
-		<p style="text-align: center;">
-			My name is Gary, my name is also Gyan.
-		</p>
-	</body>
+		<div ng-view>
+			<div class="ui massive active centered inline loader"></div>
+		</div>
 
+		<div class="ui segment">
+			<div class="ui text container">
+				<div class="ui divider"></div>
+
+				022 675 4763
+				<br />
+				<a href="mailto:simplegsb@gmail.com">simplegsb@gmail.com</a>
+			</div>
+		</div>
+
+		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBy4uezjac97xYeOHIt-Rmd9YxHYP-STjE"></script>
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-85600887-1', 'auto');
+		</script>
+
+		<script src="me.js" type="text/javascript"></script>
+		<script src="campers.js" type="text/javascript"></script>
+		<script src="software.js" type="text/javascript"></script>
+
+		<!--script src="simplicity.js/simplicity.js" type="text/javascript"></script-->
+		<!--script src="camper-viewer/camper-viewer.js" type="text/javascript"></script-->
+
+		<script id="mirrorVertexShader" type="x-shader/x-vertex">
+			uniform mat4 cameraTransform;
+			uniform mat4 worldTransform;
+
+			attribute vec4 color;
+			attribute vec3 normal;
+			attribute vec3 position;
+			attribute vec2 texCoord;
+
+			varying vec4 colorOut;
+			varying vec3 normalOut;
+			varying vec2 texCoordOut;
+
+			void main()
+			{
+				colorOut = color;
+
+				mat4 worldRotation = worldTransform;
+				worldRotation[3][0] = 0.0;
+				worldRotation[3][1] = 0.0;
+				worldRotation[3][2] = 0.0;
+				worldRotation[3][3] = 1.0;
+				normalOut = (worldRotation * vec4(normal, 1.0)).xyz;
+
+				texCoordOut = texCoord;
+				texCoordOut.s = 1.0 - texCoordOut.s;
+
+				vec3 flippedPosition = position;
+				flippedPosition.x *= -1.0;
+
+				gl_Position = worldTransform * vec4(flippedPosition, 1.0);
+				gl_Position.y *= -1.0;
+				gl_Position = cameraTransform * gl_Position;
+			}
+		</script>
+
+		<script id="mirrorFragmentShader" type="x-shader/x-fragment">
+			precision mediump float;
+
+			uniform float alpha;
+			uniform sampler2D sampler;
+			uniform int samplerEnabled;
+
+			varying vec4 colorOut;
+			varying vec3 normalOut;
+			varying vec2 texCoordOut;
+
+			void main()
+			{
+				if (samplerEnabled == 1)
+				{
+					gl_FragColor = texture2D(sampler, texCoordOut);
+				}
+				else
+				{
+					gl_FragColor = colorOut;
+				}
+
+				float ambientFactor = 0.2;
+				float diffuseFactor = dot(normalOut, vec3(0.0, 0.0, 1.0));
+				gl_FragColor.xyz = gl_FragColor.xyz * ambientFactor + gl_FragColor.xyz * diffuseFactor;
+				gl_FragColor.w *= alpha;
+
+				float transparency = texCoordOut.t * 0.9;
+				gl_FragColor.w *= transparency;
+			}
+		</script>
+
+		<script id="simpleVertexShader" type="x-shader/x-vertex">
+			uniform mat4 cameraTransform;
+			uniform mat4 worldTransform;
+
+			attribute vec4 color;
+			attribute vec3 normal;
+			attribute vec3 position;
+			attribute vec2 texCoord;
+
+			varying vec4 colorOut;
+			varying vec3 normalOut;
+			varying vec2 texCoordOut;
+
+			void main()
+			{
+				colorOut = color;
+
+				mat4 worldRotation = worldTransform;
+				worldRotation[3][0] = 0.0;
+				worldRotation[3][1] = 0.0;
+				worldRotation[3][2] = 0.0;
+				worldRotation[3][3] = 1.0;
+				normalOut = (worldRotation * vec4(normal, 1.0)).xyz;
+
+				texCoordOut = texCoord;
+
+				gl_Position = worldTransform * vec4(position, 1.0);
+				gl_Position = cameraTransform * gl_Position;
+			}
+		</script>
+
+		<script id="simpleFragmentShader" type="x-shader/x-fragment">
+			precision mediump float;
+
+			uniform float alpha;
+			uniform sampler2D sampler;
+			uniform int samplerEnabled;
+
+			varying vec4 colorOut;
+			varying vec3 normalOut;
+			varying vec2 texCoordOut;
+
+			void main()
+			{
+				if (samplerEnabled == 1)
+				{
+					gl_FragColor = texture2D(sampler, texCoordOut);
+				}
+				else
+				{
+					gl_FragColor = colorOut;
+				}
+
+				float ambientFactor = 0.2;
+				float diffuseFactor = dot(normalOut, vec3(0.0, 0.0, 1.0));
+				gl_FragColor.xyz = gl_FragColor.xyz * ambientFactor + gl_FragColor.xyz * diffuseFactor;
+				gl_FragColor.w *= alpha;
+			}
+		</script>
+	</body>
 </html>
