--- a/software.html
+++ b/software.html
@@ -204,7 +204,7 @@
 				<i class="large github icon" />
 			</a>
 
-			<p>simplicity is a game engine I am creating. Originally it was written in Java but I ported it to C++11. This engine was superceded by the <a onclick="openSection('section', 'mediaDesignSchool'); openSection('subSection', 'gazEngine');">GazEngine</a> middleware I used for my projects at Media Design School where I could not use C++11. I have now taken the much more comprehensive and tested code from <a onclick="openSection('section', 'mediaDesignSchool'); openSection('subSection', 'gazEngine');">GazEngine</a> back to simplicity and C++11 and continued to expand on it.</p>
+			<p>simplicity is a game engine I am creating. It has the ambitious goal of being a simple game engine. Originally it was written in Java but I ported it to C++11. This engine was superceded by the GazEngine middleware I used for my projects at Media Design School where I could not use C++11. I have now taken the much more comprehensive and tested code from GazEngine back to simplicity and C++11 and continued to expand on it.</p>
 
 			<code>
 				#include &lt;simplicity/API.h&gt;
@@ -321,7 +321,7 @@
 				<i class="large github icon" />
 			</a>
 
-			<p>GazEngine is the middleware that I developed during my time at Media Design School and is used with the majority of the demos that follow (except for a couple that use the GDE middleware provided by Media Design School). It was based on earlier work I had done to create <a onclick="openSection('section', 'openSource'); openSection('subSection', 'simplicity');">simplicity</a> but that engine was in C++11 which could not be used for school projects. <a onclick="openSection('section', 'openSource'); openSection('subSection', 'simplicity');">simplicity</a> has now superceded GazEngine again.</p>
+			<p>GazEngine is the middleware that I developed during my time at Media Design School and is used with the majority of the demos that follow (except for a couple that use the GDE middleware provided by Media Design School). It was based on earlier work I had done to create simplicity but that engine was in C++11 which could not be used for school projects. simplicity has now superceded GazEngine again.</p>
 
 			<code>
 				#include &lt;gazengine/GazEngine.h&gt;
