Add using namespace to example simplicity code.

--- a/software.html
+++ b/software.html
@@ -210,6 +210,9 @@
 				#include &lt;simplicity/API.h&gt;
 				</br>
 				</br>
+				using namespace simplicity;
+				</br>
+				</br>
 				int main()
 				</br>
 				{
